--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Smarticky Notes</title>
+    <link rel="icon" type="image/png" href="/static/img/logo.png">
     <link rel="stylesheet" href="/static/css/smartisan.css?v=2" />
     <link rel="stylesheet" href="/static/css/custom.css?v=4" />
 </head>
@@ -374,6 +375,9 @@
             </div>
             <div class="modal-body">
                 <div style="text-align: center; padding: 20px 0;">
+                    <div class="about-logo">
+                        <img src="/static/img/logo.png" alt="Smarticky Logo">
+                    </div>
                     <h3 class="neon-text" style="margin-bottom: 20px;">Smarticky Notes</h3>
                     <div style="color: #666; line-height: 1.8;">
                         <p><strong>Version:</strong> <span id="app-version">Loading...</span></p>
