--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -33,7 +33,7 @@
             <!-- User Info -->
             <div class="user-info" id="user-info">
                 <div class="user-avatar">
-                    <img id="user-avatar-img" src="/static/img/default-avatar.svg" alt="Avatar" />
+                    <img id="user-avatar-img" src="/static/img/default-avatar.svg" alt="Avatar" onerror="this.src='/static/img/default-avatar.svg'" />
                 </div>
                 <div class="user-details">
                     <div class="user-name" id="user-name">User</div>
@@ -476,7 +476,9 @@
                                     background: #f0f0f0;
                                     border: 2px solid #ddd;
                                 ">
-                            <img id="profile-avatar-preview" src="/static/img/default-avatar.svg" alt="Avatar" style="
+                            <img id="profile-avatar-preview" src="/static/img/default-avatar.svg" alt="Avatar"
+                                onerror="this.src='/static/img/default-avatar.svg'"
+                                style="
                                         width: 100%;
                                         height: 100%;
                                         object-fit: cover;
@@ -539,28 +541,6 @@
                     <button class="btn-primary" onclick="updateProfileNickname()">
                         <i data-feather="save"></i> Update Nickname
                     </button>
-                </div>
-
-                <!-- Editor Type Section -->
-                <div class="form-section" style="margin-bottom: 30px">
-                    <h3 style="
-                                font-size: 16px;
-                                margin-bottom: 15px;
-                                color: #666;
-                            ">
-                        Editor Preferences
-                    </h3>
-                    <div class="form-group">
-                        <label>Default Editor Type</label>
-                        <select id="profile-editor-type" class="form-select-sm" onchange="updateEditorType()">
-                            <option value="traditional">Traditional Markdown</option>
-                            <option value="milkdown">Milkdown (WYSIWYG)</option>
-                        </select>
-                        <small style="color: #999; margin-top: 4px; display: block;">
-                            Choose your preferred editor for writing notes
-                        </small>
-                    </div>
-                </div>
                 </div>
 
                 <!-- Password Change Section -->
